# zotero-mcp

./: LICENSE  README.md  pyproject.toml
src/zotero_mcp/: __init__.py  __main__.py
